Verify failure of DN parsing in a wrong DN.

--- a/tests/cert-tests/Makefile.am
+++ b/tests/cert-tests/Makefile.am
@@ -25,7 +25,7 @@ EXTRA_DIST = ca-no-pathlen.pem no-ca-or-pathlen.pem aki-cert.pem \
 	bmpstring.pem template-utf8.pem template-utf8.tmpl \
 	template-dn.tmpl template-dn.pem complex-cert.pem template-overflow.pem \
 	template-overflow.tmpl template-overflow2.pem template-overflow2.tmpl \
-	template-date.tmpl template-date.pem
+	template-date.tmpl template-date.pem template-dn-err.tmpl
 
 dist_check_SCRIPTS = pathlen aki template-test pem-decoding dane
 
