Corrected check of usage of local libopts when autogen isn't present

--- a/configure.ac
+++ b/configure.ac
@@ -46,7 +46,7 @@ if test x"$AUTOGEN" = "x/bin/true"; then
 ***
 *** autogen not found. Will not link against libopts.
 *** ]])
-NEED_LIBOPTS_DIR=true
+enable_local_libopts=yes
 fi
 
 # For includes/gnutls/gnutls.h.in.
@@ -314,7 +314,7 @@ fi
 
 AM_CONDITIONAL(ENABLE_TROUSERS, test "$with_tpm" != "no")
 
-ac_enable_local_libopts=yes
+enable_local_libopts=yes
 LIBOPTS_CHECK([src/libopts])
 if test "$NEED_LIBOPTS_DIR" != "true";then
 	dnl delete libopts-generated files
@@ -325,7 +325,9 @@ if test "$NEED_LIBOPTS_DIR" != "true";then
 		fi
 	done
 	AC_SUBST([AUTOGEN], [/bin/true])
-	ac_enable_local_libopts=no
+	enable_local_libopts=no
+else
+	enable_local_libopts=yes
 fi
 
 AC_CHECK_TYPE(ssize_t,
@@ -680,7 +682,7 @@ if features are disabled)
 AC_MSG_NOTICE([Optional applications:
 
   crywrap app:          $libidn
-  local libopts:        ${ac_enable_local_libopts}
+  local libopts:        ${enable_local_libopts}
   local libtasn1:       ${included_libtasn1}
 ])
 
