Updated manpage generation (and information stored to it).

--- a/configure.ac
+++ b/configure.ac
@@ -58,6 +58,7 @@ AC_SUBST(MAJOR_VERSION, `echo $PACKAGE_VERSION | sed 's/\(.*\)\..*\..*/\1/g'`)
 AC_SUBST(MINOR_VERSION, `echo $PACKAGE_VERSION | sed 's/.*\.\(.*\)\..*/\1/g'`)
 AC_SUBST(PATCH_VERSION, `echo $PACKAGE_VERSION | sed 's/.*\..*\.\(.*\)/\1/g'`)
 AC_SUBST(NUMBER_VERSION, `printf "0x%02x%02x%02x" $MAJOR_VERSION $MINOR_VERSION $PATCH_VERSION`)
+AC_SUBST([PACKAGE_BUGREPORT],[bugs@gnutls.org])
 
 touch suppressions.valgrind
 dnl C and C++ capabilities
