--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -965,7 +965,7 @@ dist_man_MANS += $(APIMANS)
 
 $(APIMANS): stamp_mans
 
-YEAR=`date +%Y`
+YEAR=$(shell date +%Y)
 
 compare-makefile:
 	FUNCS=`cat $(top_srcdir)/lib/includes/gnutls/*.h | $(top_srcdir)/doc/scripts/getfuncs.pl|sort -d`; \
