--- a/lib/nettle/Makefile.am
+++ b/lib/nettle/Makefile.am
@@ -24,6 +24,7 @@ AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS) \
 	$(GMP_CFLAGS)
 
 AM_CPPFLAGS = \
+	-I$(srcdir)/int		\
 	-I$(srcdir)/../../gl		\
 	-I$(builddir)/../../gl		\
 	-I$(srcdir)/../includes		\
@@ -38,10 +39,11 @@ endif
 noinst_LTLIBRARIES = libcrypto.la
 
 libcrypto_la_SOURCES = pk.c mpi.c mac.c cipher.c init.c egd.c egd.h \
-	gnettle.h gcm-camellia.h gcm-camellia.c rnd-common.h rnd-common.c
+	gnettle.h rnd-common.h rnd-common.c \
+	int/gcm-camellia.h int/gcm-camellia.c
 
 if ENABLE_FIPS140
-libcrypto_la_SOURCES += rnd-fips.c
+libcrypto_la_SOURCES += rnd-fips.c int/drbg-aes.c int/drbg-aes.h int/drbg-aes-self-test.c
 else
 libcrypto_la_SOURCES += rnd.c
 endif
