--- a/configure.ac
+++ b/configure.ac
@@ -353,7 +353,7 @@ fi
 AM_CONDITIONAL(ENABLE_TROUSERS, test "$with_tpm" != "no")
 
 LIBOPTS_CHECK([src/libopts])
-if test "$NEED_LIBOPTS_DIR" == "true";then
+if test "$NEED_LIBOPTS_DIR" = "true";then
 	dnl delete libopts-generated files
 	for i in ${srcdir}/src/*-args.c.bak ${srcdir}/src/*-args.h.bak; do
 		nam=`echo $i|sed 's/.bak//g'`
