moved gnutls_fips140_mode_enabled to gnutls.h

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -2101,6 +2101,8 @@ int gnutls_mac_self_test(unsigned all, gnutls_mac_algorithm_t mac);
 int gnutls_digest_self_test(unsigned all, gnutls_digest_algorithm_t digest);
 int gnutls_pk_self_test(unsigned all, gnutls_pk_algorithm_t pk);
 
+/* FIPS140-2 related functions */
+int gnutls_fips140_mode_enabled(void);
 
   /* Gnutls error codes. The mapping to a TLS alert is also shown in
    * comments.
