disable static library build by default

--- a/configure.ac
+++ b/configure.ac
@@ -215,6 +215,7 @@ AC_SUBST([WARN_CFLAGS])
 dnl Programs for compilation or development
 AC_PROG_LN_S
 AC_LIBTOOL_WIN32_DLL
+LT_INIT([disable-static])
 AC_PROG_LIBTOOL
 
 
