--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,13 @@
 
 SUBDIRS = gl
 
+BUILT_SOURCES = srptool-args.c srptool-args.h \
+	psk-args.c psk-args.h ocsptool-args.h ocsptool-args.c \
+	serv-args.c serv-args.h cli-args.c cli-args.h \
+	cli-debug-args.c cli-debug-args.h certtool-args.c certtool-args.h \
+	danetool-args.c danetool-args.h p11tool-args.c p11tool-args.h \
+	tpmtool-args.c tpmtool-args.h
+
 if ENABLE_CRYWRAP
 SUBDIRS += crywrap
 endif
